# axum-first-test

./: Cargo.toml
src/: api.rs  main.rs  persistence.rs  server.rs
src/api/: controllers.rs  routes.rs  utils.rs
src/api/controllers/: products_controllers.rs
src/api/dtos/: product_dtos.rs
src/api/routes/: product_routes.rs
src/api/utils/: result_entity.rs
src/domain/entities/: product_entity.rs
src/persistence/: products_repository.rs
src/services/: product_service.rs
