[package]
name = "axum-products"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.6.18"
serde = { version = "1.0.163", features = ["derive"]}
serde_json = "1.0.0"
utoipa = { version = "3.3.0", features = [ "axum_extras" ] }
utoipa-swagger-ui = { version = "3.1.3" , features = ["axum"] }
